--- a/ContactsManager.UI/Views/Persons/Index.cshtml
+++ b/ContactsManager.UI/Views/Persons/Index.cshtml
@@ -2,6 +2,7 @@
 
 @{
     ViewBag.Title = "Persons";
+    ViewBag.CurrentUrl = "~/Persons/Index";
 }
 <form asp-controller="Persons" asp-action="Index" method="get">
 
@@ -113,14 +114,14 @@
                 @foreach (PersonResponse person in Model)
                 {
                     <tr>
-                        <td style="width:12%">@person.PersonName</td>
-                        <td style="width:18%">@person.Email</td>
-                        <td style="width:12%">@person.DateOfBirth?.ToString("dd MMM yyyy")</td>
+                        <td style="width:10%">@person.PersonName</td>
+                        <td style="width:20%">@person.Email</td>
+                        <td style="width:10%">@person.DateOfBirth?.ToString("dd MMM yyyy")</td>
                         <td style="width:6%">@person.Age</td>
                         <td style="width:8%">@person.Gender</td>
                         <td style="width:10%">@person.Country</td>
-                        <td style="width:14%">@person.Address</td>
-                        <td style="width:7%">@person.ReceiveNewsLetters</td>
+                        <td style="width:15%">@person.Address</td>
+                        <td style="width:8%">@person.ReceiveNewsLetters</td>
                         <td style="width:20%">
                             <a asp-controller="Persons" asp-action="Edit" asp-route-personID="@person.PersonID" class="button-link button-blue-back">Edit</a>
                             @* /Persons/Edit/1 *@
