--- a/ContactsManager.UI/Views/Shared/_Layout.cshtml
+++ b/ContactsManager.UI/Views/Shared/_Layout.cshtml
@@ -4,7 +4,7 @@
 <head>
     <meta name="viewport" content="width=device-width" />
     <title>@ViewBag.Title</title>
-    <link href="~/StyleSheet.css" rel="stylesheet" />
+    <link href="~/Stylesheet.css" rel="stylesheet" />
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
@@ -18,7 +18,7 @@
                     <div class="flex-1" id="app-title-div">
                         <h1 class="app-title">
                             <i class="fa-solid fa-people-simple"></i>
-                            Contact Manager
+                            Contacts Manager
                         </h1>
                     </div>
 
@@ -27,11 +27,48 @@
                         <div class="navbar account-links">
 
                             <ul>
-                                <li>
-                                    <a asp-controller="Account" asp-action="Register">Register</a>
-                                    <a asp-controller="Account" asp-action="Login">Login</a>
-                                </li>
+                                @if (User.Identity.IsAuthenticated)
+                                {
+                                    <li>
+                                        <i class="fa-solid fa-user"></i>
+                                        @User.Identity?.Name
+                                    </li>
+                                    <li>
+                                        <a asp-controller="Account" asp-action="Logout">Logout</a>
+                                    </li>
+                                }
+                                else
+                                {
+                                    @if (ViewBag.CurrentUrl == "~/Account/Register")
+                                    {
+                                        <li>
+                                            <a asp-controller="Account" asp-action="Register" class="nav-active">Register</a>
+                                        </li>
+                                    }
+                                    else
+                                    {
+                                        <li>
+                                            <a asp-controller="Account" asp-action="Register">Register</a>
+                                        </li>
+                                    }
+
+
+                                    @if (ViewBag.CurrentUrl == "~/Account/Login")
+                                    {
+                                        <li>
+                                            <a asp-controller="Account" asp-action="Login" class="nav-active">Login</a>
+                                        </li>
+                                    }
+                                    else
+                                    {
+                                        <li>
+                                            <a asp-controller="Account" asp-action="Login">Login</a>
+                                        </li>
+                                    }
+
+                                }
                             </ul>
+
                         </div>
 
                     </div>
@@ -43,10 +80,33 @@
             <div class="navbar mb">
 
                 <ul>
-                    <li>
-                        <a asp-controller="Persons" asp-action="Index">Persons</a>
-                        <a asp-controller="Countries" asp-action="UploadFromExcel">Upload Countries</a>
-                    </li>
+                    @if (ViewBag.CurrentUrl == "~/Persons/Index")
+                    {
+                        <li>
+                            <a asp-controller="Persons" asp-action="Index" class="nav-active">Persons</a>
+                        </li>
+                    }
+                    else
+                    {
+                        <li>
+                            <a asp-controller="Persons" asp-action="Index">Persons</a>
+                        </li>
+                    }
+
+
+                    @if (ViewBag.CurrentUrl == "~/Countries/UploadFromExcel")
+                    {
+                        <li>
+                            <a asp-controller="Countries" asp-action="UploadFromExcel" class="nav-active">Upload Countries</a>
+                        </li>
+                    }
+                    else
+                    {
+                        <li>
+                            <a asp-controller="Countries" asp-action="UploadFromExcel">Upload Countries</a>
+                        </li>
+                    }
+
                 </ul>
             </div>
 
